<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/imageSymbole"
        android:layout_width="58dp"
        android:layout_height="63dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/fille" />

    <TextView
        android:id="@+id/textRang"
        style="@style/headerText"
        android:layout_gravity="center_vertical"
        android:text="@string/rang" />

    <TextView
        style="@style/headerText"
        android:layout_gravity="center_vertical"
        android:text="@string/point" />

    <TextView
        android:id="@+id/textPrenom"
        style="@style/headerText"
        android:layout_gravity="center_vertical"
        android:paddingLeft="@dimen/default_padding"
        android:text="@string/prenom" />

    <TextView
        android:id="@+id/textFrequence"
        style="@style/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/frequence" />

    <TextView
        style="@style/headerText"
        android:layout_gravity="center_vertical"
        android:text="@string/fois" />

    <ImageView
        android:id="@+id/imageFavoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="10dp"
        android:src="@drawable/star" />

</LinearLayout>